base markup completed

--- a/index.html
+++ b/index.html
@@ -41,9 +41,135 @@
     </header>
     <main class="main">
       <section class="upper">
-        <div class="upper_content"></div>
+        <div class="container">
+          <div class="upper_content">
+            <div class="col">
+              <h3>Molibe-first</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error
+                aspernatur quo tenetur, id, architecto tempore repellendus
+                nesciunt corporis odio maiores nobis reiciendis iste?
+              </p>
+            </div>
+            <div class="col">
+              <h3>Efficient</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error
+                aspernatur quo tenetur, id, architecto tempore repellendus
+                nesciunt corporis odio maiores nobis reiciendis iste?
+              </p>
+            </div>
+            <div class="col">
+              <h3>done right</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error
+                aspernatur quo tenetur, id, architecto tempore repellendus
+                nesciunt corporis odio maiores nobis reiciendis iste?
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="lower">
+        <div class="container">
+          <div class="left">
+            <h2>It doesn't have to be so hard</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+              incidunt commodi dolores quisquam reprehenderit nulla fugiat ipsa
+              veritatis nobis quaerat harum quae inventore eius totam dolor
+              natus vel delectus iure cumque, laboriosam, enim eaque. Omnis at
+              iure ducimus recusandae? Odio voluptatibus, quod nihil facere
+              harum est eius quisquam.
+            </p>
+            <img src="img/the-image.jpg" alt="skecthes image" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+              incidunt commodi dolores quisquam reprehenderit nulla fugiat ipsa
+              veritatis nobis quaerat harum quae inventore eius totam dolor
+              natus vel delectus iure cumque, laboriosam, enim eaque. Omnis at
+              iure ducimus recusandae? Odio voluptatibus, quod nihil facere
+              harum est eius quisquam.
+            </p>
+          </div>
+          <div class="right">
+            <div class="right_col">
+              <div>
+                <h3>Breat it dowm</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Reiciendis, consequuntur ad quis iste odio necessitatibus aut
+                  aperiam ab.
+                </p>
+              </div>
+            </div>
+            <div class="right_col">
+              <div>
+                <h3>Work your way up</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Reiciendis, consequuntur ad quis iste odio necessitatibus aut
+                  aperiam ab.
+                </p>
+              </div>
+            </div>
+            <div class="right_col">
+              <div>
+                <h3>You break it</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Reiciendis, consequuntur ad quis iste odio necessitatibus aut
+                  aperiam ab.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <h1>just scratching the surface</h1>
+        <div class="footer-split">
+          <div>
+            <h4>About our company</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas
+              sequi officia omnis doloribus sit consequatur iusto reiciendis
+              labore ducimus alias.
+            </p>
+          </div>
+
+          <div>
+            <h4>Getting around</h4>
+            <ul class="footer_list">
+              <li class="footer_item">Home</li>
+              <li class="footer_item">About</li>
+              <li class="footer_item">Contact</li>
+            </ul>
+          </div>
+
+          <div>
+            <h4>Other things</h4>
+            <ul class="footer_list">
+              <li class="footer_item">Home</li>
+              <li class="footer_item">About</li>
+              <li class="footer_item">Contact</li>
+              <li class="footer_item">Lorem ipsum</li>
+            </ul>
+          </div>
+
+          <div>
+            <h4>Add more</h4>
+            <ul class="footer_list">
+              <li class="footer_item">Home</li>
+              <li class="footer_item">About</li>
+              <li class="footer_item">Contact</li>
+              <li class="footer_item">Lorem ipsum</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
