--- a/index.html
+++ b/index.html
@@ -18,33 +18,31 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container row align">
+        <button class="nav-toggle" aria-label="open navigation">
+          <span class="hamburger"></span>
+        </button>
+
         <a class="logo" href="#">
           <img src="img/logo.svg" alt="conquering responsive layouts" />
         </a>
         <nav class="nav">
-          <ul class="nav_list">
-            <li class="nav_item"><a href="" class="nav_link">Home</a></li>
-            <li class="nav_item"><a href="" class="nav_link">About</a></li>
-            <li class="nav_item"><a href="" class="nav_link">contact</a></li>
-            <li class="nav_item"><a href="" class="nav_link">sign in</a></li>
-            <li class="nav_item">
-              <a href="" class="nav_link nav_link--button">sign up</a>
+          <ul class="nav__list nav__list--primary">
+            <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Contact</a>
+            </li>
+          </ul>
+          <ul class="nav__list nav__list--secondary">
+            <li class="nav__item">
+              <a href="#" class="nav__link">Sign In</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link nav__link--button">Sign up</a>
             </li>
           </ul>
         </nav>
-        <div class="hero">
-          <div class="hero_text--primary">
-            <h1>Responsive layouts <span>dont have to be a struggle</span></h1>
-          </div>
-          <div class="hero_text--secondary">
-            <p class="hero_text--p">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <button>i want to learn</button>
-          </div>
-        </div>
       </div>
     </header>
     <main class="main">
