--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Oswald:wght@700&display=swap"
       rel="stylesheet"
     />
     <script src="index.js" defer></script>
@@ -23,8 +19,8 @@
           <span class="hamburger"></span>
         </button>
 
-        <a class="logo" href="#">
-          <img src="img/logo.svg" alt="conquering responsive layouts" />
+        <a class="logo" href="#"
+          ><img src="./img/logo.svg" alt="conquering responsive layouts" />
         </a>
         <nav class="nav">
           <ul class="nav__list nav__list--primary">
@@ -45,6 +41,20 @@
         </nav>
       </div>
     </header>
+    <section class="hero">
+      <div class="container">
+        <div class="big__text">
+          <h1>Responsive layouts <span>dont't have to be a struggle</span></h1>
+        </div>
+        <div class="small__text">
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
+            totam consectetur quae laboriosam nobis! Magnam, earum? Quasi, odit.
+          </p>
+          <button class="btn">i want to learn</button>
+        </div>
+      </div>
+    </section>
     <main class="main">
       <section class="upper">
         <div class="container">
@@ -149,29 +159,29 @@
           <div>
             <h4>Getting around</h4>
             <ul class="footer_list">
-              <li class="footer_item">Home</li>
-              <li class="footer_item">About</li>
-              <li class="footer_item">Contact</li>
+              <li class="footer_item"><a href="#">Home</a></li>
+              <li class="footer_item"><a href="#">About</a></li>
+              <li class="footer_item"><a href="#">Contact</a></li>
             </ul>
           </div>
 
           <div>
             <h4>Other things</h4>
             <ul class="footer_list">
-              <li class="footer_item">Home</li>
-              <li class="footer_item">About</li>
-              <li class="footer_item">Contact</li>
-              <li class="footer_item">Lorem ipsum</li>
+              <li class="footer_item"><a href="#">Home</a></li>
+              <li class="footer_item"><a href="#">About</a></li>
+              <li class="footer_item"><a href="#">Contact</a></li>
+              <li class="footer_item"><a href="#">Lorem</a></li>
             </ul>
           </div>
 
           <div>
             <h4>Add more</h4>
             <ul class="footer_list">
-              <li class="footer_item">Home</li>
-              <li class="footer_item">About</li>
-              <li class="footer_item">Contact</li>
-              <li class="footer_item">Lorem ipsum</li>
+              <li class="footer_item"><a href="#">Home</a></li>
+              <li class="footer_item"><a href="#">About</a></li>
+              <li class="footer_item"><a href="#">Contact</a></li>
+              <li class="footer_item"><a href="#">Lorem</a></li>
             </ul>
           </div>
         </div>
