main section small screens completed

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <main class="main">
       <section class="upper">
         <div class="container">
-          <div class="upper_content">
+          <div class="upper__content">
             <div class="col">
               <h3>Molibe-first</h3>
               <p>
@@ -109,7 +109,7 @@
             </p>
           </div>
           <div class="right">
-            <div class="right_col">
+            <div class="right__col">
               <div>
                 <h3>Breat it dowm</h3>
                 <p>
@@ -119,7 +119,7 @@
                 </p>
               </div>
             </div>
-            <div class="right_col">
+            <div class="right__col">
               <div>
                 <h3>Work your way up</h3>
                 <p>
@@ -129,7 +129,7 @@
                 </p>
               </div>
             </div>
-            <div class="right_col">
+            <div class="right__col">
               <div>
                 <h3>You break it</h3>
                 <p>
