footer completed, small screens design completed

--- a/index.html
+++ b/index.html
@@ -44,14 +44,17 @@
     <section class="hero">
       <div class="container">
         <div class="big__text">
-          <h1>Responsive layouts <span>dont't have to be a struggle</span></h1>
+          <h1>
+            Responsive layouts
+            <span class="span">dont't have to be a struggle</span>
+          </h1>
         </div>
         <div class="small__text">
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
             totam consectetur quae laboriosam nobis! Magnam, earum? Quasi, odit.
           </p>
-          <button class="btn">i want to learn</button>
+          <button class="btn" type="submit">i want to learn</button>
         </div>
       </div>
     </section>
@@ -146,7 +149,7 @@
     <footer class="footer">
       <div class="container">
         <h1>just scratching the surface</h1>
-        <div class="footer-split">
+        <div class="footer__split">
           <div>
             <h4>About our company</h4>
             <p>
@@ -158,30 +161,52 @@
 
           <div>
             <h4>Getting around</h4>
-            <ul class="footer_list">
-              <li class="footer_item"><a href="#">Home</a></li>
-              <li class="footer_item"><a href="#">About</a></li>
-              <li class="footer_item"><a href="#">Contact</a></li>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Home</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">About</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact</a>
+              </li>
             </ul>
           </div>
 
           <div>
             <h4>Other things</h4>
-            <ul class="footer_list">
-              <li class="footer_item"><a href="#">Home</a></li>
-              <li class="footer_item"><a href="#">About</a></li>
-              <li class="footer_item"><a href="#">Contact</a></li>
-              <li class="footer_item"><a href="#">Lorem</a></li>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Home</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">About</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Lorem</a>
+              </li>
             </ul>
           </div>
 
           <div>
             <h4>Add more</h4>
-            <ul class="footer_list">
-              <li class="footer_item"><a href="#">Home</a></li>
-              <li class="footer_item"><a href="#">About</a></li>
-              <li class="footer_item"><a href="#">Contact</a></li>
-              <li class="footer_item"><a href="#">Lorem</a></li>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Home</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">About</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Lorem</a>
+              </li>
             </ul>
           </div>
         </div>
