--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <main class="main">
       <section class="upper">
         <div class="container">
-          <div class="upper__content">
+          <div class="upper__content split align__text">
             <div class="col">
               <h3>Molibe-first</h3>
               <p>
@@ -111,8 +111,8 @@
               harum est eius quisquam.
             </p>
           </div>
-          <div class="right">
-            <div class="right__col">
+          <div class="right split align__text">
+            <div class="right__col col">
               <div>
                 <h3>Breat it dowm</h3>
                 <p>
@@ -122,7 +122,7 @@
                 </p>
               </div>
             </div>
-            <div class="right__col">
+            <div class="right__col col">
               <div>
                 <h3>Work your way up</h3>
                 <p>
@@ -132,7 +132,7 @@
                 </p>
               </div>
             </div>
-            <div class="right__col">
+            <div class="right__col col">
               <div>
                 <h3>You break it</h3>
                 <p>
@@ -149,65 +149,66 @@
     <footer class="footer">
       <div class="container">
         <h1>just scratching the surface</h1>
-        <div class="footer__split">
-          <div>
+        <div class="footer__split split">
+          <div class="footer__about">
             <h4>About our company</h4>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas
-              sequi officia omnis doloribus sit consequatur iusto reiciendis
-              labore ducimus alias.
+              sequi officia omnis doloribus sit consequatur iusto reiciendis.
             </p>
           </div>
 
-          <div>
-            <h4>Getting around</h4>
-            <ul class="footer__list">
-              <li class="footer__item">
-                <a href="#" class="footer__link">Home</a>
-              </li>
-              <li class="footer__item">
-                <a href="#" class="footer__link">About</a>
-              </li>
-              <li class="footer__item">
-                <a href="#" class="footer__link">Contact</a>
-              </li>
-            </ul>
-          </div>
+          <div class="footer__nav">
+            <div>
+              <h4>Getting around</h4>
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <a href="#" class="footer__link">Home</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#" class="footer__link">About</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#" class="footer__link">Contact</a>
+                </li>
+              </ul>
+            </div>
 
-          <div>
-            <h4>Other things</h4>
-            <ul class="footer__list">
-              <li class="footer__item">
-                <a href="#" class="footer__link">Home</a>
-              </li>
-              <li class="footer__item">
-                <a href="#" class="footer__link">About</a>
-              </li>
-              <li class="footer__item">
-                <a href="#" class="footer__link">Contact</a>
-              </li>
-              <li class="footer__item">
-                <a href="#" class="footer__link">Lorem</a>
-              </li>
-            </ul>
-          </div>
+            <div>
+              <h4>Other things</h4>
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <a href="#" class="footer__link">Home</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#" class="footer__link">About</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#" class="footer__link">Contact</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#" class="footer__link">Lorem</a>
+                </li>
+              </ul>
+            </div>
 
-          <div>
-            <h4>Add more</h4>
-            <ul class="footer__list">
-              <li class="footer__item">
-                <a href="#" class="footer__link">Home</a>
-              </li>
-              <li class="footer__item">
-                <a href="#" class="footer__link">About</a>
-              </li>
-              <li class="footer__item">
-                <a href="#" class="footer__link">Contact</a>
-              </li>
-              <li class="footer__item">
-                <a href="#" class="footer__link">Lorem</a>
-              </li>
-            </ul>
+            <div>
+              <h4>Add more</h4>
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <a href="#" class="footer__link">Home</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#" class="footer__link">About</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#" class="footer__link">Contact</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#" class="footer__link">Lorem</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
