--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </header>
     <section class="hero">
-      <div class="container">
+      <div class="container flex">
         <div class="big__text">
           <h1>
             Responsive layouts
@@ -90,7 +90,7 @@
         </div>
       </section>
       <section class="lower">
-        <div class="container">
+        <div class="container flex">
           <div class="left">
             <h2>It doesn't have to be so hard</h2>
             <p>
@@ -111,7 +111,7 @@
               harum est eius quisquam.
             </p>
           </div>
-          <div class="right split align__text">
+          <div class="right split align__text re__split">
             <div class="right__col col">
               <div>
                 <h3>Breat it dowm</h3>
